@@ -7,6 +7,7 @@ language-puppet (1.4.1) UNRELEASED; urgency=medium
   * Change [Puppet 4] empty strings in boolean context are true (See #205).
   * Fix regex variable resolution (See #248).
   * Fix missing fail on extra spaces (See #187)
+  * Fix read multiple hierachies in hiera format v5
 
  -- Simon Marechal <simon.marechal@edf.fr>  Thu, 13 Sep 2018 15:54:03 +0200
 
